Revert "Revert to java 8"
This reverts commit f7a4de00c4ffa03e72aa30b6a55a419773a30c88.